@@ -5,63 +5,70 @@ print.evaltsd <- function(x, ...) {
   cat("TSD with 2x2 crossover\n")
   cat("Inverse Normal approach\n")
   if (x$max.comb.test) cat(" - maximum") else cat(" - standard")
-  cat(" combination test (")
-  if (x$max.comb.test) cat("weights = ", x$weight[1], " ", x$weight[2], ")\n", 
-                           sep = "") 
-  else cat("weight = ", x$weight, ")\n", sep = "")
-  cat(" - significance levels (s1/s2) =", round(x$cl$siglev, 5), "\n")
-  cat(" - critical values (s1/s2) =", round(x$cl$cval, 5), "\n")
-  if (x$ssr.conditional == "no") {
-    cat(" - without conditional error rates and conditional (estimated target) power\n")
-  } else {
-    cat(" - with ")
-    if (x$ssr.conditional == "error") {
-      cat("conditional error rates\n")
-    } else {
-      if (x$fCpower > x$targetpower)
-        cat("conditional error rates\n")
-      else
-        cat("conditional error rates and conditional (estimated target) power\n")
-    }
-  }
+  cat(" combination test\n")
+  cat(" - significance levels (s1/s2) =", round(x$alpha, 5), "\n")
+  cat(" - critical values (s1/s2) =", round(x$cval, 5), "\n")
   ### Derived values -----------------------------------------------------------
   if (x$stage == 1) {
-    cat("Interim analysis of first stage\n")
-    ## TO DO
-    ## Include t11, p11 etc.
-    
-    ## Futility regarding PE, CI, Nmax
-    if ("no" %in% x$fCrit) {
-      cat("No futility criterion regarding CI, PE or Nmax\n")
+    if (x$ssr.conditional == "no") {
+      cat(" - without conditional error rates and conditional (estimated target) power\n")
     } else {
-      if (is.finite(x$fCNmax)) {
-        cat("Futility criterion Nmax = ", x$fCNmax, ":", sep = "")
-        if (x$futility[3] == 1) cat("met\n") else cat("not met\n")
+      cat(" - with ")
+      if (x$ssr.conditional == "error") {
+        cat("conditional error rates\n")
       } else {
-        cat("No futility criterion regarding Nmax\n")
-      }
-      if (x$fCrange[1L] > 0 && is.finite(x$fCrange[2L])) {
-        fCrit <- x$fCrit
-        fCrit <- if ("ci" %in% fCrit) "90% CI" else if ("pe" %in% fCrit) "PE"
-        cat("Futility criterion ", fCrit," outside ", round(x$fCrange[1L], 4), 
-            " ... ", round(x$fCrange[2L], 4), ":", sep = "")
-        if (x$futility[2] == 1) {
-          cat("met")
-          if (!is.null(x$CI90$lower))
-            cat("(90% CI = (", round(x$CI90$lower, 4), ", ", 
-                round(x$CI90$upper, 4), "))", sep = "")
-          cat("\n")
-        } else { 
-          cat("not met\n")
-        }
-      } else {
-        cat("No futility criterion regarding PE or CI\n")
+        if (x$fCpower > x$targetpower)
+          cat("conditional error rates\n")
+        else
+          cat("conditional error rates and conditional (estimated target) power\n")
       }
     }
-    ## Futility regarding Power of stage 1
-    #cat("Power of stage 1 = ", round(x$`Power Stage 1`, 4), sep = "")
-    #if (x$futility[1] == 1) cat(" > ", x$fCpower, "-> BE failed")
+    cat("\nInterim analysis of first stage\n")
+    if (x$stop_s1) {
+      if (x$stop_fut) {
+        cat("- Stop due to futility:\n")
+        if (x$futility[[1]] == 1) {
+          cat("  BE not declared and Power of first stage (",
+              round(x$`Power Stage 1`, 4), ") > ", round(x$fCpower, 4), "\n",
+              sep = "")
+        } else if (x$futility[[2]] == 1) {
+          fCrit <- x$fCrit
+          if ("ci" %in% fCrit) {
+            fCrit <- paste0("90% CI (", round(x$CI90$lower, 4), ", ", 
+                            round(x$CI90$upper, 4), ")")
+          } else if ("pe" %in% fCrit) {
+            fCrit <- "PE"
+          }
+          cat("  ", fCrit," outside ", round(x$fCrange[1L], 4),  " ... ", 
+              round(x$fCrange[2L], 4), "\n", sep = "")
+        } else if (x$futility[[3]] == 1) {
+          cat("  n2 such that n1 + n2 > ", x$fCNmax, "\n", sep = "")
+        }
+      } else {
+        cat("- Stop because BE can be concluded\n")
+        cat("- Derived key statistics:\n")
+        cat("  p11 = ", round(x$p11, 5), ", p12 = ", round(x$p12, 5), 
+            "\n", sep = "")
+        cat("  Repeated CI = (", round(x$RCI$lower, 4), ", ",
+            round(x$RCI$upper, 4), ")\n", sep = "")
+      }
+    } else {
+      cat("- BE not achieved\n")
+      cat("- No futility criterion met\n")
+      cat("- Continue to stage 2 with n2 = ", x$n2, " subjects\n", sep = "")
+    }
   } else {
-    cat("Final analysis of second stage\n")
+    cat("\nFinal analysis of second stage\n")
+    if (x$BE) {
+      cat("- BE achieved\n")
+    } else {
+      cat("- BE not achieved\n")
+    }
+    cat("- Derived key statistics:\n")
+    cat("  z01 = ", round(x$z01, 5), ", z02 = ", round(x$z02, 5), 
+        "\n", sep = "")
+    cat("  Repeated CI = (", round(x$RCI$lower, 4), ", ",
+        round(x$RCI$upper, 4), ")\n", sep = "")
+    cat("  Median unbiased estimate = ", round(x$MEUE, 4), "\n", sep = "")
   }
 }
